{
    "name": "InputActions",
    "maps": [
        {
            "name": "DefActionMap",
            "id": "d1cc2b25-1be7-4022-a44f-a9af0661a995",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "cb892dc0-cf95-4820-9f0f-a8f777e06872",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ClickPos",
                    "type": "Value",
                    "id": "459f3792-2a06-462f-974e-38fa1ff534b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3d6025a2-f7e5-42c1-8eaa-ebdd6a1efa1e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3143409-e270-4ec7-9a3b-abd740517223",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92fcb4e0-9ed9-4795-89a7-90f190dd8aaf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e49fa72f-eb6a-4a91-b25a-d0cb728cc7bd",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}